# is-valid-url-wasm

./: .gitignore  Cargo.toml  README.md
example/: index.html  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
pkg/: README.md  package.json  url_checker.d.ts  url_checker.js  url_checker_bg.wasm
src/: lib.rs
